# Kids-GPT

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.toml  pyproject.toml  requirements.txt  start.sh
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
hello_stranger/: agent.py  gr.py  prompt.py  tool.py
kids_gpt/: agent.py  gr.py  logger_setup.py  main.py  prompt.py  tool.py  util.py
